[package]
name = "board-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-slic = {path = "../riscv-slic"}
heapless = "0.7"
riscv = {git = "https://github.com/greenlsi/riscv"}
e310x = { path = "/home/steew/Projects/clone/e310x", features = ["rt"]}
hifive1 = { path = "/home/steew/Projects/clone/hifive1", features = ["board-redv"] }
bare-metal = "0.2"
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
