[package]
name = "hifive1-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-slic = {path = "../riscv-slic", features = ["clint-backend"]}
e310x = { git = "https://github.com/greenlsi/e310x.git", branch = "master"}
hifive1 = { git = "https://github.com/romancardenas/hifive1.git", branch = "master", features = ["board-redv"] }
bare-metal = "0.2"
riscv-rt = "0.12.0"
panic-halt = "0.2.0"
