[package]
name = "hifive1-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-slic = { path = "../riscv-slic" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv", branch = "riscv-pac-only" } # TODO use crates.io
hifive1 = { git = "https://github.com/greenlsi/hifive1.git", branch = "master", features = ["board-redv"] } # TODO use crates.io
bare-metal = "0.2"
panic-halt = "0.2.0"

[features]
clint = ["riscv-slic/clint-backend"]
mecall = ["riscv-slic/mecall-backend"]

[[example]]
name = "clint"
required-features = ["clint"]

[[example]]
name = "mecall"
required-features = ["mecall"]
