[package]
name = "riscv-slic-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"

[features]
msoft = [] # do not enable this feature directly. Use one of the *-backend features instead
ssoft = [] # do not enable this feature directly. Use one of the *-backend features instead

clint-backend = ["msoft"] # enable this feature to use the CLINT peripheral as SWI backend
# ssoft-backend = ["ssoft"]
