[package]
name = "riscv-slic-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the riscv-slic crate"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"

[features]
msoft = [] # do not enable this feature directly. Use one of the *-backend features instead
ssoft = [] # do not enable this feature directly. Use one of the *-backend features instead

clint-backend = ["msoft"] # enable this feature to use the CLINT peripheral as SWI backend
mecall-backend = [] # enable this feature to use the machine-level ECALL instruction as SWI backend
ssoft-backend = ["ssoft"] # enable this feature to use the supervisor-level software interrupt as SWI backend
