[package]
name = "riscv-slic-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-slic = {path = "../riscv-slic"}
heapless = "0.7"
riscv = {git = "https://github.com/rust-embedded/riscv.git", branch = "peripheral-plic"}
e310x = { git = "https://github.com/greenlsi/e310x.git", branch = "master", features = ["rt"]}
hifive1 = { version = "0.8.0", features = ["board-hifive1-revb"] }
bare-metal = "0.2"
riscv-rt = "0.6.0"
panic-halt = "0.2.0"
