[package]
name = "riscv-slic"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = "1.1.2"
heapless = "0.8.0"
portable-atomic = { version = "1.4", default-features = false, features = ["require-cas"] }
riscv = "0.11.0"
riscv-slic-macros = { path = "../riscv-slic-macros" }

[features]
msoft = [] # do not enable this feature directly. Use one of the *-backend features instead
ssoft = ["riscv/s-mode"] # do not enable this feature directly. Use one of the *-backend features instead

clint-backend = ["msoft", "riscv-slic-macros/clint-backend"] # enable this feature to use the CLINT peripheral as SWI backend
ssoft-backend = ["ssoft", "riscv-slic-macros/ssoft-backend"] # enable this feature to use supervisor-level software interrupts as SWI backend

unsafe-assume-single-core = ["portable-atomic/unsafe-assume-single-core"] # enable this feature for single-core systems with no atomic support
critical-section = ["portable-atomic/critical-section"] # enable this feature for systems with no atomic support that implement critical-section
