[package]
name = "riscv-vsoft-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-vsoft = {path = "../riscv-vsoft", features = ["e310x"]}
riscv-vsoft-macros = {path = "../riscv-vsoft-macros"}
