[package]
name = "tests-clint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-slic = { path = "../riscv-slic", features = ["clint-backend"] }
riscv-rt = "0.13.0"
hifive1 = { git = "https://github.com/riscv-rust/e310x.git", branch = "ehv1", features = ["board-redv"] }
panic-halt = "0.2.0"
